<resources>
    <string name="app_name">GatherUp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_text_login_page">Not registered yet? Register Now!</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="SendMessage">Send Message</string>
    <string name="Save">Save</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="CreateEvent">Create Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_event">Join Event</string>
    <string name="email">Email</string>
    <string name="confirm_edition">Confirm Edition</string>
    <string name="delete">Delete</string>
    <string name="filter_by_theme">Filter by theme:</string>
    <string name="confirm_filter">Confirm Filter</string>
    <string name="clear">Clear</string>

</resources>