<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/LogoLogin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logogatherup" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/fields_bg"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        style="@style/Inputs"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/fields_bg"
        style="@style/Inputs"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/fields_bg"
        style="@style/Inputs"
        android:inputType="textPassword"
        android:hint="@string/prompt_password" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/fields_bg"
        style="@style/Inputs"
        android:inputType="textPassword"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/buttons_bg"
        android:text="Register"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:autoSizeTextType="uniform" />
        style="@style/Buttons"
        android:text="@string/register" />

</LinearLayout>